# proto-flutter-plugin

./: .gitignore  .prototools  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  moon.yml
.moon/: toolchain.yml  workspace.yml
docs/: development.md  setup.md
src/: proto.rs
tests/: download_test.rs
