[package]
name = "flutter_tool"
version = "0.3.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"

[dependencies]
extism-pdk = "1.3.0"
proto_pdk = "0.28.0"
schematic = { version = "*", default-features = false, features = ["schema"] }
serde = "1.0.217"
serde_yml = "0.0.12"

[features]
default = ["wasm"]
wasm = []

[dev-dependencies]
proto_pdk_test_utils = "0.35.0"
starbase_sandbox = "0.9.0"
tokio = "1.43.0"
